# cpeq-infolettre-automatique

./: .cruft.json  .env.example  .gitignore  .pre-commit-config.yaml  README.md  bootstrap_vectorstore.py  docker-compose.yml  function_app.py  host.json  newsletter.md  newsletter_example.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  terraform.yml  test.yml
data/: reference_news.json
data/weaviate/: classifications.db  schema.db
data/weaviate/classificationcpeq/mGHcYzB3CLDU/: proplengths
data/weaviate/collection_name/FU9xLmszAPwy/: proplengths
data/weaviate/collection_name/IuIwhapugo39/: proplengths
data/weaviate/raft/: raft.db
data/weaviate/test_collection/aE4MngTxb5xT/: proplengths
docs/decisions/: README.md
docs/decisions/architecture/: 0000-initial-mvp.md  0000-scoping-initial-mvp.md
iac/: .terraform.lock.hcl  README.md  backend.tf  main.tf  providers.tf  secrets.tf  variables.tf
iac/variables/: dev.tfvars  prod.tfvars
mlruns/.trash/423104204403600472/: meta.yaml
mlruns/.trash/711213924220050169/: meta.yaml
mlruns/.trash/711213924220050169/06e4e3b3035a4bdda399b7ddf6d9f435/: meta.yaml
mlruns/.trash/711213924220050169/09761e7a1fce48b8a0e1c3911a38b3dd/: meta.yaml
mlruns/.trash/711213924220050169/0ae329deafa8415ab30b718ddd4345e9/: meta.yaml
mlruns/.trash/711213924220050169/0cd97ab81e144ac7bd92cc1d3a45d145/: meta.yaml
mlruns/.trash/711213924220050169/0eadcf3bfa6d4410ba6c191ced5a01c4/: meta.yaml
mlruns/.trash/711213924220050169/1059e9e8e69a469f9de9fea8e5306e0c/: meta.yaml
mlruns/.trash/711213924220050169/1367e8a3e32b45f39102b84a2648f5bd/: meta.yaml
mlruns/.trash/711213924220050169/1667fc6c078643d9a573d816514bb45e/: meta.yaml
mlruns/.trash/711213924220050169/1834f8037adb4f93a5c715876779b0cd/: meta.yaml
mlruns/.trash/711213924220050169/19538a0c116f412fa8a7af6c03246883/: meta.yaml
mlruns/.trash/711213924220050169/1a49a8edb1404950b42c73710726e03a/: meta.yaml
mlruns/.trash/711213924220050169/1d5bd93b25c2417fb5d4273e1e4ffeab/: meta.yaml
mlruns/.trash/711213924220050169/2ac2a41e3fc94196ae6a33a3df134cbc/: meta.yaml
mlruns/.trash/711213924220050169/2bf943ab0ae34f6e99249d264b15e038/: meta.yaml
mlruns/.trash/711213924220050169/3326332f34d842a383fdf34778991af7/: meta.yaml
mlruns/.trash/711213924220050169/3a73c44bb9c345628954e340c9c13d1e/: meta.yaml
mlruns/.trash/711213924220050169/3c3849a1b0c94fbb9808f298f6d9ba16/: meta.yaml
mlruns/.trash/711213924220050169/3db7925c3b8449ed852415216c34c247/: meta.yaml
mlruns/.trash/711213924220050169/40f2370527c6419ea34b49013b41aa56/: meta.yaml
mlruns/.trash/711213924220050169/5297728d5d724e49a56304d5e4e81aa9/: meta.yaml
mlruns/.trash/711213924220050169/547347ed308e425c979b0d525bb68710/: meta.yaml
mlruns/.trash/711213924220050169/5d14d00dff674fb1afdf320134ddd8bf/: meta.yaml
mlruns/.trash/711213924220050169/639d2d283c564763918ac059f122d640/: meta.yaml
mlruns/.trash/711213924220050169/65f908f8dd4b43d7aa80c9edab700827/: meta.yaml
mlruns/.trash/711213924220050169/68528f3b77ca4aa684738552bb1afb17/: meta.yaml
mlruns/.trash/711213924220050169/6db3817bc4cc4a7f9b24234b288a93a1/: meta.yaml
mlruns/.trash/711213924220050169/7067578778ad400dbf8f438f1689b4c9/: meta.yaml
mlruns/.trash/711213924220050169/724399ba07c14cb4983b3efad1a7d9a5/: meta.yaml
mlruns/.trash/711213924220050169/7940e668ffdb47fb9fd2393268308919/: meta.yaml
mlruns/.trash/711213924220050169/80aca9cf0bea49479f52a5c7a5ed18ec/: meta.yaml
mlruns/.trash/711213924220050169/8554b7744db141dfb3dec232e790bf4f/: meta.yaml
mlruns/.trash/711213924220050169/8cd229a67b244a1088c1f7bdb4a29252/: meta.yaml
mlruns/.trash/711213924220050169/8ce65bf6f3184a79b377594aed5fb9b1/: meta.yaml
mlruns/.trash/711213924220050169/90dff364480b45ba8419715706af5597/: meta.yaml
mlruns/.trash/711213924220050169/9105c8e8c3e64d438bb4126c81db6cc0/: meta.yaml
mlruns/.trash/711213924220050169/9698198df0f849d99e583a70e9196817/: meta.yaml
mlruns/.trash/711213924220050169/98e1994b204542819a090a4392a14ab7/: meta.yaml
mlruns/.trash/711213924220050169/a9b7d803d2704163a52651e26a211e83/: meta.yaml
mlruns/.trash/711213924220050169/af2f9f067783408db7283c6e752f730c/: meta.yaml
mlruns/.trash/711213924220050169/b246102fda8e4166a181b720f36135dd/: meta.yaml
mlruns/.trash/711213924220050169/bbae831a49fc4c1096791e7cabf9cc3b/: meta.yaml
mlruns/.trash/711213924220050169/beb3ab513edc46c291f231aeb8fb3a4d/: meta.yaml
mlruns/.trash/711213924220050169/c884bceb594047419a4429b9363b7ce6/: meta.yaml
mlruns/.trash/846720365235895119/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/2da3e7c7896642558d9c20df5598ec9f/: meta.yaml
mlruns/315592051004813027/: meta.yaml
mlruns/315592051004813027/860fe760187d4b029e139c9cb520bbb3/: meta.yaml
mlruns/315592051004813027/9fdbaa94d5254c768f05a2d1fc16eaed/: meta.yaml
rubrics/: rubrics.json
scripts/: __init__.py  bootstrap_vectorstore.py  classification_evaluation.py  schedule_sitemaps.py  test_dataset_creation.py
src/cpeq_infolettre_automatique/: __init__.py  api.py  classification_algo.py  completion_model.py  config.py  dependencies.py  embedding_model.py  news_classifier.py  news_producer.py  news_repository.py  newsletter_formatter.py  newsletter_generator.py  reference_news_repository.py  repositories.py  schemas.py  service.py  summary_generator.py  utils.py  vectorstore.py  webscraper_io_client.py
src/cpeq_infolettre_automatique/repositories/: __init__.py  news_repository.py
tests/: api_test.py  conftest.py  news_repository_test.py  reference_news_repository_test.py  service_test.py  webscraper_io_client_test.py
tests/functional/: __init__.py  api_test.py  reference_news_repository_test.py  vectorstore_test.py
tests/unit/: __init__.py  conftest.py  newsletter_formatter_test.py  newsletter_generator_test.py  newsletter_test.py  reference_news_repository_test.py  schemas_test.py  service_test.py  summary_generator_test.py  utils_test.py  webscraper_io_client_test.py
tests/unit/test_data/: scraped_data.txt
(+260 files in other folders)
